# Zyklon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  zyklon.xml
benchmark/: 10_30_20_23:59:38.txt  10_31_20_00:08:44.txt
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/lib/ZyklonProfiler/: Makefile  cmake_install.cmake
cmake/lib/glad/: Makefile  cmake_install.cmake
cmake/lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
cmake/lib/glfw/docs/: Doxyfile  Makefile  cmake_install.cmake  warnings.txt
cmake/lib/glfw/docs/html/: bug.html  build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_2883db41122abfad935d1c08f9c318e8.html  dir_3168ef8e5631e82e37b432e61dbcdbbb.html  dir_51c2867b890d9751a65fadf4e474d0c2.html  dir_60998cd85baac7459881549174dcbfbd.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  (+42 more)
cmake/lib/glfw/src/: Makefile  cmake_install.cmake
cmake/lib/glm/: Makefile  cmake_install.cmake
cmake/lib/imgui-test/: Makefile  cmake_install.cmake
cmake/lib/spdlog/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  spdlogConfig.cmake
cmake/lib/spdlog/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  spdlog-utests
docs/: .$diagram.drawio.bkp  .$diagram.drawio.dtmp  diagram.drawio  resources.md
examples/Constraints/: CMakeLists.txt
examples/Constraints/src/: Constraints.cpp  Constraints.h  Physics.cpp  Physics.h  PhysicsConstants.h  UVSphere.cpp  UVSphere.h
examples/Constraints/src/Shaders/: Polygon.shader  checker_board.shader  simple_perlin.shader  toon.shader  voronoi.shader  wood.shader
examples/Gravity/: CMakeLists.txt
examples/Gravity/src/: Gravity.cpp  Gravity.h  HexagonalSphere.cpp  HexagonalSphere.h  Physics.cpp  Physics.h  Sphere.cpp  Sphere.h  UVSphere.cpp  UVSphere.h
examples/Gravity/src/Shaders/: Polygon.shader  _wood.shader  simple_perlin.shader  wood.shader
examples/Grid/: CMakeLists.txt
examples/Grid/src/: Grid.cpp  Grid.h
examples/Grid/src/Shaders/: Grid.shader
examples/Maze/: CMakeLists.txt  ReadMe.md
examples/Maze/src/: Maze.cpp  Maze.h
examples/Maze/src/Shaders/: Square.shader
examples/Plane/: CMakeLists.txt
examples/Plane/src/: Plane.cpp  Plane.h
examples/Plane/src/Shaders/: Grid.shader
examples/Sandbox/: CMakeLists.txt
examples/Sandbox/src/: Sandbox.cpp  Sandbox.h
examples/Sandbox/src/Shaders/: Cube.shader
examples/Sphere/: CMakeLists.txt
examples/Sphere/src/: Sphere.cpp  Sphere.h
examples/Sphere/src/Shaders/: Cube.shader  Polygon.shader  Square.shader  Triangle.shader
include/Renderer/: GraphicsContext.h
include/Zyklon/: Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.h  Window.h  Zyklon.h  zyklon_exports.h
include/Zyklon/Events/: KeyEvent.h  MouseEvent.h
include/Zyklon/Input/: KeyCodes.h  MouseButtonCodes.h
include/Zyklon/Platform/Linux/: LinuxWindow.h
include/Zyklon/Platform/Macos/: MacosInput.h  MacosWindow.h
include/Zyklon/Platform/OpenGL/: OpenGLContext.h
include/Zyklon/Platform/Windows/: WindowsInput.h
lib/: ReadMe.md
lib/glad/: CMakeLists.txt
lib/glm/: Makefile  cmake_install.cmake
logs/: simple_log
notes/: Features.md  RendererAPI.md  Thoughts.md
scripts/: build.sh  gprof.sh  pull.sh  pull_02.sh  pull_03.sh
src/: Application.cpp  ImguiBuild.cpp  ImguiLayer.cpp  Layer.cpp  LayerStack.cpp  LinuxInput.cpp  LinuxWindow.cpp  Log.cpp  MacosWindow.cpp  zyklon_pch.cpp  zyklon_pch.h
src/Imgui/: ImguiBuild.cpp  ImguiLayer.cpp  ImguiLayer.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/Renderer/API/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLErrorManager.cpp  OpenGLErrorManager.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexBufferLayout.h  Shader.h
src/Renderer/Camera/: Camera.h  OrbitControls.cpp  OrbitControls.h  OrthographicCamera.cpp  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Shaders/: BasicShader.shader  Cube.shader  Square.shader  Triangle.shader
src/Zyklon/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h  Zyklon.h  zyklon_exports.h  zyklon_pch.h
src/Zyklon/Components/: Component.cpp  Component.h
src/Zyklon/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  GameObject.cpp  GameObject.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Scene.cpp  Scene.h  Timestep.h  UUID.cpp  UUID.h  Window.h  zyklon_pch.cpp
src/Zyklon/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Zyklon/Imgui/: ImguiBuild.cpp  ImguiLayer.cpp
src/Zyklon/Input/: Input.h
src/Zyklon/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
src/Zyklon/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLErrorManager.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.h
src/Zyklon/Platform/Windows/: WindowsInput.cpp  WindowsWindow.h
src/Zyklon/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  Material.h  Mesh.h  RenderCommand.cpp  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Zyklon/Renderer/Camera/: OrbitControls.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp
(+1 files in other folders)
